corrigindo bug e nova rota
